@@ -1,8 +1,8 @@
 package com.knuissant.dailyq.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -28,15 +28,24 @@ public class RivalService {
 
     public RivalResponse sendRivalRequest(Long senderId, Long receiverId) {
 
+        if (senderId.equals(receiverId)) {
+            throw new BusinessException(ErrorCode.CANNOT_RIVAL_YOURSELF, senderId);
+        }
+
         User sender = findUserByIdOrThrow(senderId);
         User receiver = findUserByIdOrThrow(receiverId);
 
-        validateRivalRequestNotExists(senderId, receiverId);
+        try {
+            validateRivalRequestNotExists(senderId, receiverId);
 
-        Rival rivalRequest = Rival.create(sender, receiver);
-        Rival savedRival = rivalRepository.save(rivalRequest);
+            Rival rivalRequest = Rival.create(sender, receiver);
+            Rival savedRival = rivalRepository.save(rivalRequest);
 
-        return RivalResponse.from(savedRival);
+            return RivalResponse.from(savedRival);
+        } catch (DataIntegrityViolationException e) {
+            throw new BusinessException(ErrorCode.RIVAL_REQUEST_ALREADY_EXIST, senderId,
+                    receiverId);
+        }
     }
 
     @Transactional(readOnly = true)
@@ -49,7 +58,7 @@ public class RivalService {
         return rivalRepository.findByReceiverIdAndStatus(receiverId, RivalStatus.WAITING)
                 .stream()
                 .map(ReceivedRivalRequest::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public RivalResponse acceptRivalRequest(Long senderId, Long receiverId) {
@@ -84,8 +93,7 @@ public class RivalService {
     }
 
     private Rival findWaitingRivalRequest(Long senderId, Long receiverId) {
-        return rivalRepository.findBySenderIdAndReceiverId(senderId, receiverId)
-                .filter(r -> r.getStatus() == RivalStatus.WAITING)
+        return rivalRepository.findBySenderIdAndReceiverIdAndStatus(senderId,receiverId,RivalStatus.WAITING)
                 .orElseThrow(
                         () -> new BusinessException(ErrorCode.RIVAL_REQUEST_NOT_FOUND, senderId,
                                 receiverId));
